modificacion contacto y script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,29 +1,46 @@
 {
     "cSpell.words": [
+        "acciones",
+        "agregar",
         "apellido",
+        "aquí",
         "Beneficios",
         "compartiremos",
         "Correo",
         "ejemplo",
         "Electrónico",
+        "entrada",
+        "enviarlos",
+        "envío",
         "Esta",
         "Estilos",
+        "Formulario",
         "hecha",
         "Hernández",
         "Inicio",
+        "mensaje",
         "Menú",
+        "mostrar",
         "nadie",
+        "necesarias",
         "Nosotros",
         "Número",
         "nunca",
+        "obtener",
         "pagina",
+        "predeterminado",
+        "Prevenir",
+        "procesar",
         "prueba",
         "Quiénes",
+        "realizar",
+        "servidor",
         "solamente",
         "Somos",
         "Tecnologias",
         "Telefónico",
         "teléfono",
-        "usuario"
+        "usuario",
+        "valores"
     ]
 }
